# llm-testing

./: LICENSE  README.md  data_extraction_evaluation.ipynb  init_env.sh  llm_evaluation.py  pyproject.toml  rag_evaluation.ipynb  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
backend/prompts/: anonymization_contexts.json  anonymization_prompts.json
backend/prompts/anonymization/eng/: anonymization_prompts.json
backend/prompts/anonymization/svn/: anonymization_contexts.json  anonymization_prompts.json
backend/rag_data/: Test for anonymization.docx
backend/types/: llm_eval_types.py
backend/util/: eval_util.py  file_util.py
