[tool.poetry]
name = "llm testing"
version = "0.1.0"
description = "LLM evaluation scripts"
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.4.7"
argh = "^0.31.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
