[tool.poetry]
name = "llm testing"
version = "0.1.0"
description = "LLM evaluation scripts"
authors = ["John Smith <john@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.4.7"
argh = "^0.31.3"
llama-index-readers-file = "^0.4.7"
pymupdf = "^1.25.5"
llama-index-llms-azure-openai = "^0.3.2"
llama-index-llms-ollama = "^0.5.4"
langchain-core = "^0.3.52"
pydantic = "^2.11.3"
langchain-ollama = "^0.3.2"
langchain = "^0.3.24"
langchain-chroma = "^0.2.3"
unstructured = {extras = ["all-docs"], version = "^0.17.2"}
lxml = "^5.4.0"
langchain-community = "^0.3.23"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
